@@ -1,6 +1,6 @@
 # Go Boom Card Game
 
-A Java implementation of the trick-taking card game "Go Boom" with both console and JavaFX GUI modes. Features save/load functionality, multi-round gameplay, and score tracking. Developed as part of the TCP1201 (Object-Oriented Programming and Data Structures) assignment.
+A JavaFX implementation of the trick-taking card game "Go Boom" built with Maven. Features interactive GUI gameplay, save/load functionality, multi-round scoring, and comprehensive game rule enforcement. Developed as part of the TCP1201 (Object-Oriented Programming and Data Structures) assignment.
 
 ---
 
@@ -9,11 +9,11 @@ A Java implementation of the trick-taking card game "Go Boom" with both console 
 Go Boom is a strategic trick-taking card game for 4 players. Each player is dealt 7 cards and must follow the suit or rank of the lead card. The highest-rank card matching the lead suit wins the trick. Players must draw from the deck if they cannot play, and the game continues across multiple rounds until a player reaches 100 points.
 
 This implementation includes:
-- Console-based gameplay (Part 1 & Part 2)
-- JavaFX GUI interface (Part 2)
-- Save/load game state functionality
-- Score tracking across rounds
-- Input validation and game rule enforcement
+- JavaFX GUI interface with interactive card selection
+- Console-based gameplay mode (console output maintained for validation)
+- Save/load game state functionality (file-based persistence)
+- Multi-round score tracking with win condition detection
+- Input validation and comprehensive game rule enforcement
 
 ---
 
@@ -30,30 +30,29 @@ This implementation includes:
 
 ```
 Go-Boom/
-├── Part 1/                          # Initial console implementation
-│   ├── Boom.java                    # Main game logic (console mode)
-│   ├── Card.java                    # Card class (rank, suit)
-│   ├── Deck.java                    # Deck management
-│   ├── Game.java                    # Game state initialization
-│   ├── Player.java                  # Player class with hand management
+├── src/
+│   └── main/
+│       └── java/                    # Source code (Maven standard layout)
+│           ├── Boom.java            # Console mode entry point
+│           ├── Card.java            # Card class (rank, suit)
+│           ├── Deck.java            # Deck management & shuffling
+│           ├── Game.java            # Game state initialization
+│           ├── Player.java          # Player class with hand management
+│           ├── Gui.java             # JavaFX GUI implementation
+│           ├── SaveBox.java         # Save game dialog
+│           ├── ExitBox.java         # Exit confirmation dialog
+│           ├── MessageBox.java      # Alert/message dialog
+│           └── WinGameBox.java      # Game over screen
+│
+├── docs/                            # Documentation & assignment PDFs
 │   ├── PART1.md                     # Part 1 feature completion checklist
-│   └── TCP1201 Assignment Part 1.pdf
-│
-├── Part 2/                          # Extended version with GUI and persistence
-│   ├── Boom.java                    # Enhanced game logic
-│   ├── Card.java                    # Card class
-│   ├── Deck.java                    # Deck management
-│   ├── Game.java                    # Game initialization
-│   ├── Player.java                  # Player class
-│   ├── Gui.java                     # JavaFX GUI implementation
-│   ├── SaveBox.java                 # Save game dialog
-│   ├── ExitBox.java                 # Exit confirmation dialog
-│   ├── MessageBox.java              # Alert/message dialog
-│   ├── WinGameBox.java              # Game over screen
 │   ├── PART2.md                     # Part 2 feature completion checklist
-│   ├── bin/                         # Compiled .class files
 │   └── TCP1201 Assignment Part 1.pdf
 │
+├── target/                          # Maven build output (generated, not committed)
+├── bin/                             # Alternative build output (optional)
+├── pom.xml                          # Maven project configuration
+├── .gitignore                       # Git ignore rules
 └── README.md                        # This file
 ```
 
@@ -61,44 +60,48 @@ Go-Boom/
 
 ## ✨ Features
 
-### Part 1 (Console Mode)
+### Core Gameplay
 - ✅ Randomized 52-card deck shuffle
 - ✅ Deal 7 cards to each of 4 players
 - ✅ First card determines the lead card and starting player
 - ✅ Follow suit or rank enforcement
-- ✅ Highest-rank card with matching suit wins the trick
-- ✅ Trick winner leads next card
-- ✅ All cards displayed face-up for validation
-
-### Part 2 (Enhanced Console + GUI)
 - ✅ Draw from deck if unable to play (until valid card or deck exhausted)
 - ✅ Skip turn if deck exhausted and no playable card
-- ✅ Multi-round gameplay with score tracking
+- ✅ Highest-rank card with matching suit wins the trick
+- ✅ Trick winner leads next card
+
+### Enhanced Features
+- ✅ Multi-round gameplay with cumulative score tracking
+- ✅ Win condition detection (player reaches 100+ points)
 - ✅ Save/load game state (file-based persistence)
 - ✅ Reset game (clear scores, restart from round 1)
-- ✅ JavaFX GUI mode with interactive card play
+- ✅ JavaFX GUI mode with interactive card selection
 - ✅ Console output maintained alongside GUI (for validation)
-- ✅ Exit confirmation and win condition screens
+- ✅ Exit confirmation and game over screens
+- ✅ All cards displayed face-up for educational/validation purposes
 
 ---
 
 ## 🧠 Key Concepts Demonstrated
 
-- **Object-Oriented Design:** Separation of concerns (Card, Deck, Player, Game)
-- **Collections Framework:** ArrayList, HashMap, HashSet for deck/hand/center management
-- **File I/O:** Save/load game state using serialization or file streams
+- **Object-Oriented Design:** Separation of concerns (Card, Deck, Player, Game, GUI components)
+- **Collections Framework:** ArrayList for deck/hand/center management
+- **File I/O:** Save/load game state using file streams
 - **JavaFX GUI:** Scene graph, event handling, layout management (HBox, VBox, BorderPane)
-- **Game Logic:** Turn-based flow, rule validation, winner determination
-- **Randomization:** Deck shuffling and card distribution
+- **Game Logic:** Turn-based flow, rule validation, winner determination algorithms
+- **Maven Build System:** Dependency management, standardized project structure
+- **Cross-Platform Development:** Platform-specific JavaFX binaries automatically resolved
 
 ---
 
 ## 🚀 Getting Started
 
 ### Prerequisites
-- **JDK 21** (or compatible version)
+- **JDK 21** (Eclipse Adoptium recommended)
+- **Maven 3.9+** (for building and running)
+- **VS Code** with Java Extension Pack (optional, for IDE support)
 
-### Setup
+### Installation
 
 1. **Clone the repository:**
    ```powershell
@@ -106,74 +109,26 @@ Go-Boom/
    cd Go-Boom
    ```
 
-2. **Open in VS Code:**
-   - JavaFX JARs are already included in the `lib/` folder
-   - VS Code will auto-detect them via `.vscode/settings.json`
-   - If red squiggles appear, reload: Command Palette (Ctrl+Shift+P) → `Developer: Reload Window`
+2. **Build the project:**
+   ```powershell
+   mvn clean compile
+   ```
 
-That's it! No manual downloads needed.
+That's it! Maven will automatically download JavaFX dependencies for your platform.
 
 ---
 
 ## ▶️ Running the Game
 
-### Console Mode (Part 2)
-
 ```powershell
-# Navigate to Part 2 folder
-cd "Go-Boom\Part 2"
-
-# Compile (no JavaFX needed for console)
-javac -d bin *.java
-
-# Run console mode
-java -Xms128m -Xmx512m -cp bin Boom
+# Run with Maven (easiest method)
+mvn javafx:run
 ```
 
-### GUI Mode (Part 2)
-
-```powershell
-# Navigate to Part 2 folder
-cd "Part 2"
-
-# Compile with JavaFX (using bundled lib folder)
-javac --module-path ../lib --add-modules javafx.controls -d bin *.java
-
-# Run GUI mode with reduced heap (to avoid memory errors)
-java -Xms128m -Xmx512m --module-path ../lib --add-modules javafx.controls -cp bin Gui
-```
-
-### VS Code Launch Configuration (Optional)
-
-Create `.vscode/launch.json`:
-
-```json
-{
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "java",
-      "name": "Run Gui (JavaFX)",
-      "request": "launch",
-      "mainClass": "Gui",
-      "projectName": "Go-Boom",
-      "cwd": "${workspaceFolder}/Part 2",
-      "vmArgs": "-Xms128m -Xmx512m --module-path \"${workspaceFolder}/lib\" --add-modules javafx.controls"
-    },
-    {
-      "type": "java",
-      "name": "Run Boom (Console)",
-      "request": "launch",
-      "mainClass": "Boom",
-      "projectName": "Go-Boom",
-      "cwd": "${workspaceFolder}/Part 2",
-      "vmArgs": "-Xms128m -Xmx512m"
-    }
-  ]
-}
-```
-
-Then use VS Code's Run > Start Debugging (F5).
+**OR** using VS Code:
+- Open the project in VS Code
+- Press `F5` or select `Run > Start Debugging`
+- Choose "Run Gui (Maven)" configuration
 
 ---
 
@@ -203,26 +158,44 @@ Then use VS Code's Run > Start Debugging (F5).
 
 ---
 
-## 🛠 Technology Stack
-
-- **Language:** Java (JDK 21)
-- **GUI Framework:** JavaFX 21.x (Scene, Stage, Controls)
-- **Data Structures:** ArrayList, HashMap, HashSet, Scanner
-- **I/O:** File streams for save/load functionality
-- **Build Tool:** Manual compilation (javac) or IDE (VS Code, Eclipse)
-
----
-
 ## 📊 Sample Gameplay Flow
 
 1. **Start Game:** 7 cards dealt to each of 4 players; lead card placed in center
-2. **Player Turn:** Current player selects a card from hand (matching suit/rank)
-3. **Draw if Needed:** If no valid card, draw from deck until playable or deck empty
+2. **Player Turn:** Current player selects a card from hand (matching suit/rank) via GUI choice box
+3. **Draw if Needed:** If no valid card, click "Draw" to draw from deck until playable or deck empty
 4. **Determine Winner:** After all players play (or skip), highest-rank card of lead suit wins
 5. **Next Trick:** Winner leads next card; repeat until a player's hand is empty
 6. **Score Round:** Calculate remaining card values for other players; add to totals
 7. **Check Win Condition:** If any player ≥100 points, game ends; otherwise start new round
 8. **Save/Exit:** At any time, save game state or exit with confirmation
+
+---
+
+## 🛠 Technology Stack
+
+- **Language:** Java 21 (Eclipse Adoptium JDK)
+- **Build Tool:** Apache Maven 3.9.9
+- **GUI Framework:** JavaFX 21.0.1 (openjfx)
+- **Data Structures:** ArrayList for collections
+- **I/O:** File streams for save/load functionality
+- **IDE:** VS Code with Java Extension Pack
+
+---
+
+## 📊 Project Evolution
+
+- **Part 1 (Initial Console):** Basic console gameplay with core game mechanics, all cards displayed face-up for validation and testing purposes
+- **Part 2 (Enhanced GUI):** Added draw-from-deck functionality, multi-round scoring, save/load features, and complete JavaFX GUI with dialog boxes
+- **Maven Migration:** Reorganized from `Part 1/` and `Part 2/` directories to Maven standard layout (`src/main/java/`), replaced bundled `lib/` folder with automatic dependency management via Maven Central
+
+---
+
+## 🔧 Development Notes
+
+- **Source code:** `src/main/java/` (Maven standard layout)
+- **Documentation:** `docs/` (assignment PDFs, feature checklists)
+- **Build output:** `target/` (Maven) or `bin/` (manual compilation)
+- **Configuration:** `pom.xml` (Maven project config), `.vscode/` (VS Code settings) Code settings)
 
 ---
 
@@ -235,41 +208,34 @@ Then use VS Code's Run > Start Debugging (F5).
 
 ## 📸 Screenshots
 
-*(Optional: Add screenshots of console output and GUI gameplay here)*
+### Main Menu
+![Main Menu](screenshots/main.png)
 
-**Console Mode:**
-```
-========== START GAME ==========
-Round #1
-Trick #1
+### Gameplay
+![GUI During Play](screenshots/gui_play.png)
+*GUI mode showing all players' hands with interactive card selection*
 
------ Center -----
-5♦
+![Trick Winner](screenshots/gui_turn_win.png)
+*Determining trick winner - highest rank of lead suit*
 
-Player 1 turn
-Player 1 cards: [A♠, 3♦, 7♣, J♥, K♠, 2♦, 9♠]
-Enter card to play: 3♦
-...
-```
+![Game Won](screenshots/gui_game_won.png)
+*Game over screen when a player reaches 100+ points*
 
-**GUI Mode:**
-- Main menu with Play/Load/Exit buttons
-- Game board showing all 4 players' hands (face-up for validation)
-- Center area with lead card and current trick cards
-- Choice box for card selection + Play/Draw buttons
-- Save/Reset/Exit controls
-- Win screen with final scores
+### Console Output (Parallel to GUI)
+![Console Gameplay](screenshots/console_play.png)
+*Console output showing card plays and game state*
+
+![Console Trick Win](screenshots/console_turn_win.png)
+*Console displaying trick winner determination*
+
+![Console Game Won](screenshots/console_game_won.png)
+*Final scores and game outcome in console*
 
 ---
 
 ## 📝 Academic Context
 
-**Course:** TCP1201 – Object-Oriented Programming and Data Structures  
-**Institution:** MMU (Multimedia University)  
-**Assignment:** Two-part card game implementation (console + GUI)  
-**Date:** 2022 – 2023 Academic Year
-
-This project demonstrates practical application of OOP principles (encapsulation, inheritance), data structure usage (lists, maps, sets), file I/O, and GUI development in a game development context.
+This project demonstrates practical application of OOP principles (encapsulation, inheritance), data structure usage (ArrayList), file I/O, JavaFX GUI development, and Maven build system integration in a game development context.
 
 ---
 
